@@ -14,6 +14,12 @@
      http://www.devolution.com/~slouken/SDL/Xmingw32/crossgcc/index.html</a>.
   </p>
   <p>
+     You'll want to visit the <a href="mailto:crossgcc@sources.redhat.com">crossgcc</a> mail list <a href="http://sources.redhat.com/ml/crossgcc/">
+     archives</a>.  You'll also find a link to a crossgcc FAQ and another for
+     an ftp download site of some useful scripts on the
+     <a href="http://sources.redhat.com/ml/crossgcc/">archives</a> search page.
+  </p>
+  <p>
      There are also some pre-built versions:
      <ul>
          <li>Linux:</li>
