@@ -1,4 +1,8 @@
 
+Fri Jan 19 06:16:52 PST 2001  Earnie Boyd  <earnie@users.sourceforge.net>
+
+	* ssi/faq-cross.html: Add pointers to the crossgcc mail list.
+
 Thu Jan 18 17:41:52 PST 2001  Earnie Boyd  <earnie@users.sourceforge.net>
 
 	* lists.shtml: Add all mingw-users mailing list.
